# khukra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  board.manifest.json  pyproject.toml  requirements.txt
.cursor/rules/: data-governance.mdc  docs-governance.mdc  frontend.mdc  project-governance.mdc  python-backend.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  governance_task.md
app/: streamlit_app.py
config/: plugins.json
docs/: data-governance.md  deployment-plan.md  domain-lake-architecture.md  finance-quant-trading.md  governance-framework.md  issues-by-domain.md  operations-board.md  physical-systems.md  roadmap.md  session-summary-2026-05-20.md  versioning.md  vision.md
docs/adr/: 0001-governance-baseline.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdvancedExploration.tsx  AuthLoadingShell.tsx  ChartDashboard.tsx  ComparePanel.tsx  Dashboard.tsx  DatasetsPanel.tsx  DisruptionCockpit.tsx  DynamicParameterForm.tsx  EvaluationScorecard.tsx  ExportBar.tsx  FeatureGuide.tsx  ForecastChart.tsx  HomeOverview.tsx  IndexMathVisual.tsx  LineagePanel.tsx  LoginForm.tsx  MLOpsPanel.tsx  MetricsGrid.tsx  NewsPanel.tsx  ParameterForm.tsx  PrecisionProcessVisual.tsx  PredictionsGrid.tsx  ProductionModelChart.tsx  QueryPanel.tsx  ResearchRunSummary.tsx  RssPipelineDiagram.tsx  RunHistory.tsx  SeriesChart.tsx  Sidebar.tsx  SmartDocumentationPanel.tsx  SweepPanel.tsx  WeekAheadForecast.tsx  WorkspaceGate.tsx
frontend/src/hooks/: useCatalogSelection.ts
frontend/src/lib/: api.ts  apiBase.ts  auth.tsx  types.ts  (+2 more)
scripts/: finish-folder-rename.ps1  post-issue-evidence.ps1  restart-frontend.ps1  seed-demo.ps1  setup.ps1  setup.sh  smoke-test.ps1  smoke-test.sh  start-dev.ps1  start-dev.sh  sync-operations-board.ps1
src/khukra/: __init__.py  cli.py  config.py  registry.py
src/khukra_logistics/: __init__.py  cli.py  registry.py
tests/: test_application.py  test_bayesian.py  test_data_products.py  test_disruption_intelligence.py  test_dynamic_platform.py  test_evaluation.py  test_exploratory.py  test_finance_trading.py  test_gscpi.py  test_hybrid_composite.py  test_index_decomposition.py  test_judgment.py  test_lake.py  test_models.py  test_news.py  test_physical_boundary_break.py  test_physical_solvers.py  test_platform.py  test_production_model.py  test_research_platform.py  test_security_ops.py  test_sentiment.py  test_supply_chain.py  test_versioning.py  test_workloads.py
(+231 files in other folders)
